fixed mobile design overflow

--- a/index.css
+++ b/index.css
@@ -109,6 +109,7 @@ label {
   cursor: pointer;
   border-radius: 5px;
   border: 2px solid rgb(170, 100, 0);
+  min-width: 208px;
 }
 
 label:hover {
@@ -198,6 +199,10 @@ a {
 }
 
 @media screen and (max-width: 1100px) {
+  label {
+    width: 50vw;
+  }
+
   header {
     flex-direction: column;
     margin-left: 0;
@@ -219,6 +224,9 @@ a {
   }
 }
 @media screen and (max-width: 750px) {
+  label {
+    width: 65vw;
+  }
 
   .icon {
     width: 0;
@@ -236,4 +244,10 @@ a {
     width: 100%;
   }
   
+}
+
+@media screen and (max-width: 340px) {
+  .mainTitle {
+    font-size: 14px;
+  }
 }
